<resources>
    <string name="app_name" translatable="false">VPN</string>
    <string name="app_title" translatable="false">FUCK VPN v%s</string>

    <string name="nav_servers">Servers</string>
    <string name="nav_status">Status</string>
    <string name="nav_settings">Settings</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="clear_all">Clear all</string>

    <string name="unselect_all">Unselect All</string>
    <string name="select_all">Select All</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="repeat">Try Again</string>

    <string name="filter_country_title">Select countries to display</string>

    <string name="servers_update_title">Download servers</string>
    <string name="servers_update_loading_percent">Download: %1$d%%</string>

    <string name="servers_ping_title">Ping servers</string>
    <string name="servers_ping_state">Completed: %1$d/%2$d</string>
    <string name="servers_ping_value">%1$s ms</string>

    <string name="server_create_title">Add server</string>
    <string name="server_create_name">Server name (not required)</string>
    <string name="server_create_openvpn">OpenVPN configuration</string>
    <string name="server_create_openvpn_required">Configuration must be specified!</string>
    <string name="server_create_load_file">Load from ovpn</string>
    <string name="server_create_load_file_error">Error reading file</string>
    <string name="server_create_invalid_config">Failed to extract IP from configuration</string>
    <string name="server_create_duplicate">A server with this IP already exists</string>
    <string name="server_create_complete">Server added</string>
    <string name="server_create_updated">Server updated</string>

    <string name="servers_clear_title">Clear server list</string>
    <string name="servers_clear_confirm">Are you sure you want to clear the server list?</string>
    <string name="servers_clear_hint">Favorite servers will not be deleted.</string>
    <string name="servers_clear_complete">The server list has been cleared</string>

    <string name="server_action_title">Select server</string>
    <string name="server_action_connect">Connect to server</string>
    <string name="server_action_add_favorite">Add to favorites</string>
    <string name="server_action_remove_favorite">Remove from favorites</string>
    <string name="server_action_delete">Delete server</string>
    <string name="server_action_not_found">Server not found</string>

    <string name="server_update_complete">Loaded from remote server: %1$d</string>
    <string name="server_update_from_cache">Loaded from previous session: %1$d</string>
    <string name="server_update_from_assets">Loaded from initialization file: %1$d</string>
    <string name="server_update_failed">Failed to load server list!</string>

    <string name="status_country_flag">Country flag</string>
    <string name="desc_favorite">Favorite server</string>
    <string name="desc_server_flag">Server flag</string>

</resources>