<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/servers_clear_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/title"
        android:paddingBottom="20dp"
        android:paddingTop="0dp"/>

    <TextView
        android:text="@string/servers_clear_confirm"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:breakStrategy="balanced"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <TextView
        android:text="@string/servers_clear_hint"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/hint"
        android:paddingBottom="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ServersEmptyButtonClear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:text="@string/clear_all"
            android:backgroundTint="@color/button_cancel_background"
            style="@style/ButtonTheme" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ServersEmptyButtonCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:backgroundTint="@color/button_confirm_background"
            style="@style/ButtonTheme" />

    </LinearLayout>
</LinearLayout>
