<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CountryFilterRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_country_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/title"
        android:paddingBottom="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CountryFilterList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical" />

    <!-- Нижняя панель -->
    <LinearLayout
        android:id="@+id/CountryFilterActions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="15dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CountryFilterButtonSelectAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/select_all"
            android:tooltipText="@string/select_all"
            android:backgroundTint="@color/button_special_background"
            app:icon="@drawable/ic_select_all"
            style="@style/ButtonTheme" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CountryFilterButtonUnselectAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/unselect_all"
            android:tooltipText="@string/unselect_all"
            android:backgroundTint="@color/button_cancel_background"
            app:icon="@drawable/ic_unselect_all"
            style="@style/ButtonTheme" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CountryFilterButtonClose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/close"
            android:tooltipText="@string/close"
            android:backgroundTint="@color/button_confirm_background"
            app:icon="@drawable/ic_back"
            style="@style/ButtonTheme" />

    </LinearLayout>
</LinearLayout>
