<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CountryFilterList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxHeight="400dp"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical" />

    <!-- Нижняя панель -->
    <LinearLayout
        android:id="@+id/CountryFilterActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CountryFilterButtonSelectAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            app:icon="@drawable/ic_filter_select_all"
            android:contentDescription="@string/select_all"
            android:tooltipText="@string/select_all" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CountryFilterButtonUnselectAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            app:icon="@drawable/ic_filter_unselect_all"
            android:contentDescription="@string/unselect_all"
            android:tooltipText="@string/unselect_all" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/CountryFilterButtonClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/ic_filter_close"
            android:contentDescription="@string/close"
            android:tooltipText="@string/close" />

    </LinearLayout>

</LinearLayout>
